--- a/index.html
+++ b/index.html
@@ -6,11 +6,60 @@
   <title>Frontend Mentor | Expenses chart component</title>
   
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/style.css">
+
+  <script defer type="module" src="js/index.js"></script>
 </head>
 <body>
-  <div class="attribution">
+  <main>
+    <div class="balace-box">
+      <div class="my-balance">
+        <h2>My balance</h2>
+        <p>$921.48</p>
+      </div>
+      <img src="images/logo.svg" alt="" class="logo">
+    </div>
+
+
+    <div class="spending-box">
+      <h2>Spending - Last 7 days</h2>
+
+      <div class="chart">
+        <div class="day mon"></div>
+        <div class="day tue"></div>
+        <div class="day wed"></div>
+        <div class="day thu"></div>
+        <div class="day fri"></div>
+        <div class="day sat"></div>
+        <div class="day sun"></div>
+
+        <p>mon</p>
+        <p>tue</p>
+        <p>wed</p>
+        <p>thu</p>
+        <p>fri</p>
+        <p>sat</p>
+        <p>sun</p>
+      </div>
+
+      <hr>
+
+      <div class="total-this-month">
+        <div class="total-this-month-left">
+          <h2>Total this month</h2>
+          <p class="total-this-month-amount"></p>
+        </div>
+
+        <div class="total-this-month-right">
+          <p class="total-this-month-percentage">+2.4%</p>
+          <h2>from last month</h2>
+        </div>
+      </div>
+    </div>
+  </main>
+  <section class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </section>
 </body>
 </html>
