--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
 
-  <script defer type="module" src="js/index.js"></script>
+  <script defer src="js/index.js"></script>
 </head>
 <body>
   <main>
@@ -48,7 +48,7 @@
       <div class="total-this-month">
         <div class="total-this-month-left">
           <h2>Total this month</h2>
-          <p class="total-this-month-amount"></p>
+          <p class="total-this-month-amount">$478.33</p>
         </div>
 
         <div class="total-this-month-right">
