Added a functionality for putting values into pseudo elements using attributes

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <h2>Spending - Last 7 days</h2>
 
       <div class="chart">
-        <div class="day mon"></div>
-        <div class="day tue"></div>
-        <div class="day wed"></div>
-        <div class="day thu"></div>
-        <div class="day fri"></div>
-        <div class="day sat"></div>
-        <div class="day sun"></div>
+        <div amount="" class="day mon"></div>
+        <div amount="" class="day tue"></div>
+        <div amount="" class="day wed"></div>
+        <div amount="" class="day thu"></div>
+        <div amount="" class="day fri"></div>
+        <div amount="" class="day sat"></div>
+        <div amount="" class="day sun"></div>
 
         <p>mon</p>
         <p>tue</p>
